FIX: Nav Wrapping

--- a/uni.css
+++ b/uni.css
@@ -19,12 +19,15 @@ nav{
 	transform:translateX(-50%);
 	font-family: 'Open Sans', sans-serif;
 	top:20px;
+	width:100%;
+	text-align:center;
 }
 
 nav ul{
 	padding:0;
 	margin:0;
 	list-style:none;
+	display:inline-block;
 }
 nav li{
 	float:left;
